objects/Territory__c.object
<CustomObject>
    <description>Sales Territory Definition</description>
    <label>Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account Executive</inlineHelpText>
        <label>AE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AEAssignedTerritory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geographic_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RR_Name__c</fullName>
        <inlineHelpText>Round Robin Pool Name</inlineHelpText>
        <label>RR Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC-Sol-NA-AE</fullName>
                </value>
                <value>
                    <fullName>AC-Vel-EM-AE</fullName>
                </value>
                <value>
                    <fullName>AC-Vel-NA-AE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Momtion__c</fullName>
        <label>Sales Motion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Velocity</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Assignment__c</fullName>
        <inlineHelpText>Round Robin: Not defined territory
Open: Carved out territory, no AE assigned yet
Assigned: Named AE/SDR</inlineHelpText>
        <label>Territory Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Round Robin</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RR_Name__c</columns>
        <columns>Territory_Assignment__c</columns>
        <columns>Sales_Momtion__c</columns>
        <columns>SDR__c</columns>
        <columns>AE__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>